--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script type="text/javascript">
-    var accessToken = "2490a8f7166b48d0890c7bb9cd529731",
-      subscriptionKey = "447702d8ae284fc28292c0759044965f",
+    var accessToken = "**********************************",
+      subscriptionKey = "********************************",
       baseUrl = "https://api.api.ai/v1/",
       $speechInput,
       $recBtn,
